// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Generic Tile Badge Tile 1`] = `
<section>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-badge"
      >
        Badge
      </div>
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile (Profile) Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <span
          aria-label="Profile Image"
          class="fd-tile__profile-img"
          role="presentation"
          style="background-image: url('https://placeimg.com/60/60/nature')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Footer Text
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-badge"
      >
        Badge with a very very very very very very very very very long text
      </div>
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile (Profile) Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <span
          aria-label="Profile Image"
          class="fd-tile__profile-img"
          role="presentation"
          style="background-image: url('https://placeimg.com/50/50/nature')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--double fd-tile--feed"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-badge"
      >
        New
      </div>
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Feed Tile Title Text sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Feed Tile Subtitle Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content fd-tile__content--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <div
            class="fd-tile__content-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt magna aliqua.
          </div>
          
                
          <div
            class="fd-tile__content-byline"
          >
            About 1 minute ago.
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <div
            class="fd-numeric-content"
          >
            
                    
            <div
              class="fd-numeric-content__kpi-container"
            >
              
                        
              <div
                class="fd-numeric-content__kpi"
              >
                35
              </div>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Footer
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--double fd-tile--s fd-tile--feed"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-badge"
      >
        Badge with a very very very very very very very very very long text
      </div>
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Feed Tile Title Text sed do eiusmod
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Feed Tile Subtitle Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content fd-tile__content--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <div
            class="fd-tile__content-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod.
          </div>
          
                
          <div
            class="fd-tile__content-byline"
          >
            About 1 minute ago.
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <div
            class="fd-numeric-content fd-numeric-content--m"
          >
            
                    
            <div
              class="fd-numeric-content__kpi-container"
            >
              
                        
              <div
                class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
              >
                9
              </div>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Footer
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  
            
</section>
`;

exports[`Storyshots Components/Generic Tile Feed Tile 1`] = `


`;

exports[`Storyshots Components/Generic Tile Generic Tile Content Columns 1`] = `


`;

exports[`Storyshots Components/Generic Tile Generic Tile Layout 1`] = `


`;

exports[`Storyshots Components/Generic Tile Generic Tile Sizes 1`] = `

            
`;

exports[`Storyshots Components/Generic Tile KPI Tile 1`] = `
<section>
  

  <h4>
    KPI Tile with L-Size Numeric Content
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--kpi"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Tile Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Tile Subtitle Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi"
            >
              1Ñç
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale"
            >
              
                        
              <span
                class="fd-numeric-content__scale-arrow sap-icon--down"
              />
              
                        
              <span
                class="fd-numeric-content__scale-text"
              >
                M
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <span
            class="sap-icon--refresh fd-tile__refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--kpi fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Tile Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Tile Subtitle Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--small-tile"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi"
            >
              1Ñç
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale"
            >
              
                        
              <span
                class="fd-numeric-content__scale-arrow sap-icon--down"
              />
              
                        
              <span
                class="fd-numeric-content__scale-text"
              >
                milçM
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <span
            class="sap-icon--refresh fd-tile__refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    KPI Tile with M-Size Numeric Content
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--kpi"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Tile Title Text eiusmod tempor incididunt ut labore 
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--m"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--positive"
            >
              123
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale fd-numeric-content__scale--positive"
            >
              
                        
              <span
                class="fd-numeric-content__scale-arrow sap-icon--down"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--kpi fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Title Text eiusmod tempor incididunt
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--m fd-numeric-content--small-tile"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
            >
              -889
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale fd-numeric-content__scale--negative"
            >
              
                        
              <span
                class="fd-numeric-content__scale-arrow sap-icon--up"
              />
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    KPI Tile with S-Size Numeric Content
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--kpi"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Tile Title Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--s"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--critical"
            >
              12
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale fd-numeric-content__scale--critical"
            >
              
                        
              <span
                class="fd-numeric-content__scale-arrow sap-icon--down"
              />
              
                        
              <span
                class="fd-numeric-content__scale-text"
              >
                %
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--kpi fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Tile Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Tile Subtitle Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--small-tile fd-numeric-content--m"
        >
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--informative"
            >
              1.95
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          CAD, Current Quarter
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Generic Tile Launch Tile 1`] = `
<section>
  

  <h4>
    Launch Tile With Numeric Content and Launch Icon
  </h4>
  

  <br />
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content"
        >
          
                
          <div
            class="fd-numeric-content__launch-icon-container"
          >
            
                    
            <span
              class="fd-numeric-content__launch-icon sap-icon--line-charts"
            />
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--negative"
            >
              1Ñç
            </div>
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__scale-container"
          >
            
                    
            <div
              class="fd-numeric-content__scale fd-numeric-content__scale--negative"
            >
              
                        
              <span
                class="fd-numeric-content__scale-arrow sap-icon--down"
              />
              
                        
              <span
                class="fd-numeric-content__scale-text"
              >
                M
              </span>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <span
            class="sap-icon--refresh fd-tile__refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <div
          class="fd-numeric-content fd-numeric-content--small-tile"
        >
          
                
          <div
            class="fd-numeric-content__launch-icon-container"
          >
            
                    
            <span
              class="fd-numeric-content__launch-icon sap-icon--line-charts"
            />
            
                
          </div>
          
                
          <div
            class="fd-numeric-content__kpi-container"
          >
            
                    
            <div
              class="fd-numeric-content__kpi fd-numeric-content__kpi--positive"
            >
              1234
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    Launch Tile With Combined Header and Content
  </h4>
  

  <br />
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header-content"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile Title Text Lorem ipsum dolor sit amet, consectetur elit
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <span
            class="sap-icon--refresh fd-tile__refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--s fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header-content"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile Title Text Lorem ipsum dolor sit amet, consectetur elit
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Subtitle Text
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__footer fd-tile__footer--2-col"
      >
        
            
        <div
          class="fd-tile__section"
        >
          
                
          <span
            class="sap-icon--refresh fd-tile__refresh"
          />
          
                
          <span
            class="fd-tile__footer-text"
          >
            Now
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__section"
        >
          <span
            class="fd-tile__footer-text"
          >
            Footer
          </span>
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    Launch Tile (Profile)
  </h4>
  

  <br />
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile (Profile) Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <span
          aria-label="Profile Image"
          class="fd-tile__profile-img"
          role="presentation"
          style="background-image: url('https://placeimg.com/60/60/nature')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Footer Text
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile (Profile) Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <span
          aria-label="Profile Image"
          class="fd-tile__profile-img"
          role="presentation"
          style="background-image: url('https://placeimg.com/50/50/nature')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  

  <br />
  

  <h4>
    Launch Tile (Logo)
  </h4>
  

  <br />
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile (Logo) Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <img
          alt="SAP"
          class="fd-tile__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Footer Text
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile (Logo) Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <img
          alt="SAP"
          class="fd-tile__logo"
          src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
          srcset="//unpkg.com/fundamental-styles/dist/images/sap-logo@2x.png 1x, //unpkg.com/fundamental-styles/dist/images/sap-logo@3x.png 2x, //unpkg.com/fundamental-styles/dist/images/sap-logo@4x.png 3x"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  
            
</section>
`;

exports[`Storyshots Components/Generic Tile Line Tile 1`] = `
<section>
  

  <h4>
    Line Tile - Floating Behaviour, Cozy Mode
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile-container"
    >
       
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title very very very very very very long text
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle very very very very very very long text
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit in voluptate velit esse cillum
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title perspiciatis unde omnis iste natus error sit voluptatem
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle enim ipsam voluptatem 
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title iusto odio dignissimos ducimus
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle lorem ipsum dolor sit amet
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Line Tile - List Behaviour, Cozy Mode
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile-container fd-tile-container--list"
    >
       
                
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title very very very very very very long text
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle very very very very very very long text
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit in voluptate velit esse cillum
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Very Long Title perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Very Long Subtitle enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title iusto odio dignissimos ducimus
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle lorem ipsum dolor sit amet
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Line Tile - Floating Behaviour, Compact Mode
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile-container"
    >
       
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title very very very very very very long text
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle very very very very very very long text
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit in voluptate velit esse cillum
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title perspiciatis unde omnis iste natus error sit voluptatem
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle enim ipsam voluptatem
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title iusto odio dignissimos ducimus
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle lorem ipsum dolor sit amet
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Line Tile - List Behaviour, Compact Mode
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile-container fd-tile-container--list"
    >
       
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit in voluptate velit esse cillum
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Very Long Title perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Very Long Subtitle enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--compact fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title praesentium voluptatum deleniti atque
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Line Tile - Floating Behaviour, Cozy Mode, With Badge
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile-container"
    >
       
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title very very very very very very long text
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle very very very very very very long text
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit in voluptate velit esse cillum
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title perspiciatis unde omnis iste natus error
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle enim ipsam voluptatem quia voluptas
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title accusamus dignissimos ducimus
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle facilis distinctio
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Line Tile - List Behaviour, Cozy Mode, With Badge
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile-container fd-tile-container--list"
    >
       
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit in voluptate velit esse cillum
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Very Long Title perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Very Long Subtitle enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title accusamus et iusto odio dignissimos ducimus
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle facilis est et expedita distinctio
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title iusto odio dignissimos ducimus
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle lorem ipsum dolor sit amet
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title-container"
          >
            
                    
            <div
              class="fd-badge"
            >
              Badge
            </div>
            
                    
            <div
              class="fd-tile__title"
            >
              Line Tile Title praesentium voluptatum deleniti atque
            </div>
            
                
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Line Tile - Floating Behaviour, Cozy and Action Mode
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile-container"
    >
       
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title very very very very very very long text
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle very very very very very very long text
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit in voluptate velit esse cillum
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action is-disabled"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Disabled Line Tile Title perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle enim ipsam voluptatem quia
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title iusto odio dignissimos ducimus
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle lorem ipsum dolor sit amet
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  <br />
  

  <h4>
    Line Tile - List Behaviour, Cozy and Action Mode
  </h4>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile-container fd-tile-container--list"
    >
       
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title very very very very very very long text
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle very very very very very very long text
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action is-disabled"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Disabled Line Tile Title sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle aute irure dolor in reprehenderit in voluptate velit esse cillum
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Very Long Title perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Very Long Subtitle enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile fd-tile--line fd-tile--action"
        role="button"
        tabindex="0"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Line Tile Title iusto odio dignissimos ducimus
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            Line Tile Subtitle lorem ipsum dolor sit amet
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__action-container"
        >
          
                
          <button
            aria-label="indicator button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
            tabindex="-1"
          />
          
                
          <button
            aria-label="close button"
            class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  
            
</section>
`;

exports[`Storyshots Components/Generic Tile Slide Tile 1`] = `
<section>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--slide"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__background-img"
        style="background-image: url('https://placeimg.com/200/200/nature')"
      />
      
        
      <button
        aria-label="toggle play button"
        class="fd-tile__toggle"
      />
      
        
      <div
        class="fd-tile__container"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Wind Map: Monitoring Real-Time
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            SAP News
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__footer"
        >
          
                
          <span
            class="fd-tile__footer-text"
          >
            May 14, 2020
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__page-indicator"
        >
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot fd-tile__dot--active"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--slide fd-tile--s"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__background-img"
        style="background-image: url('https://placeimg.com/200/200/nature')"
      />
      
        
      <button
        aria-label="toggle play button"
        class="fd-tile__toggle"
      />
      
        
      <div
        class="fd-tile__container"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Wind Map: Monitoring Real-Time
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            SAP News
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__footer"
        >
          
                
          <span
            class="fd-tile__footer-text"
          >
            May 14, 2020
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__page-indicator"
        >
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot fd-tile__dot--active"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--double fd-tile--slide"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__background-img"
        style="background-image: url('https://placeimg.com/400/200/nature')"
      />
      
        
      <button
        aria-label="toggle pause button"
        class="fd-tile__toggle fd-tile__toggle--pause"
      />
      
        
      <div
        class="fd-tile__container"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Wind Map: Monitoring Real-Time and Forecasted Wind Conditions across the Globe
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            SAP News
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__footer"
        >
          
                
          <span
            class="fd-tile__footer-text"
          >
            May 14, 2020
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__page-indicator"
        >
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot fd-tile__dot--active"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--double fd-tile--s fd-tile--slide"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__background-img"
        style="background-image: url('https://placeimg.com/400/200/nature')"
      />
      
        
      <button
        aria-label="toggle pause button"
        class="fd-tile__toggle fd-tile__toggle--pause"
      />
      
        
      <div
        class="fd-tile__container"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Wind Map: Monitoring Real-Time and Forecasted Wind Conditions across the Globe
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            SAP News
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__footer"
        >
          
                
          <span
            class="fd-tile__footer-text"
          >
            May 14, 2020
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__page-indicator"
        >
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot fd-tile__dot--active"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  
            
</section>
`;

exports[`Storyshots Components/Generic Tile Tile In Action Mode 1`] = `
<section>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__overlay"
      />
      
        
      <button
        aria-label="close button"
        class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
      />
      
        
      <button
        aria-label="indicator button"
        class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
        tabindex="-1"
      />
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile (Profile) Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <span
          aria-label="Profile Image"
          class="fd-tile__profile-img"
          role="presentation"
          style="background-image: url('https://placeimg.com/60/60/nature')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Footer Text
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--launch fd-tile--s fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__overlay"
      />
      
        
      <button
        aria-label="close button"
        class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
      />
      
        
      <button
        aria-label="indicator button"
        class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
        tabindex="-1"
      />
      
        
      <div
        class="fd-tile__header"
      >
        
            
        <div
          class="fd-tile__title"
        >
          Launch Tile (Profile) Title Text
        </div>
        
            
        <div
          class="fd-tile__subtitle"
        >
          Launch Tile Subtitle
        </div>
        
        
      </div>
      
        
      <div
        class="fd-tile__content"
      >
        
            
        <span
          aria-label="Profile Image"
          class="fd-tile__profile-img"
          role="presentation"
          style="background-image: url('https://placeimg.com/50/50/nature')"
        />
        
        
      </div>
      
        
      <div
        class="fd-tile__footer"
      >
        
            
        <span
          class="fd-tile__footer-text"
        >
          Unit, Notification
        </span>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    class="docs-section-container"
  >
    
    
    <div
      class="fd-tile fd-tile--double fd-tile--slide fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__background-img"
        style="background-image: url('https://placeimg.com/400/200/nature')"
      />
      
        
      <div
        class="fd-tile__overlay"
      />
      
        
      <button
        aria-label="toggle button"
        class="fd-tile__toggle fd-tile__toggle--pause"
      />
      
        
      <button
        aria-label="close button"
        class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
      />
      
        
      <button
        aria-label="indicator button"
        class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
        tabindex="-1"
      />
      
        
      <div
        class="fd-tile__container"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Wind Map: Monitoring Real-Time and Forecasted Wind Conditions across the Globe
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            SAP News
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__footer"
        >
          
                
          <span
            class="fd-tile__footer-text"
          >
            May 14, 2020
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__page-indicator"
        >
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot fd-tile__dot--active"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-tile fd-tile--double fd-tile--s fd-tile--slide fd-tile--action"
      role="button"
      tabindex="0"
    >
      
        
      <div
        class="fd-tile__background-img"
        style="background-image: url('https://placeimg.com/400/200/nature')"
      />
      
        
      <div
        class="fd-tile__overlay"
      />
      
        
      <button
        aria-label="toggle button"
        class="fd-tile__toggle fd-tile__toggle--pause"
      />
      
        
      <button
        aria-label="close button"
        class="fd-button fd-button--compact fd-button--transparent fd-tile__action-close"
      />
      
        
      <button
        aria-label="indicator button"
        class="fd-button fd-button--compact fd-button--transparent fd-tile__action-indicator"
        tabindex="-1"
      />
      
        
      <div
        class="fd-tile__container"
      >
        
            
        <div
          class="fd-tile__header"
        >
          
                
          <div
            class="fd-tile__title"
          >
            Wind Map: Monitoring Real-Time and Forecasted Wind Conditions across the Globe
          </div>
          
                
          <div
            class="fd-tile__subtitle"
          >
            SAP News
          </div>
          
            
        </div>
        
            
        <div
          class="fd-tile__footer"
        >
          
                
          <span
            class="fd-tile__footer-text"
          >
            May 14, 2020
          </span>
          
            
        </div>
        
            
        <div
          class="fd-tile__page-indicator"
        >
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot fd-tile__dot--active"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
                
          <span
            class="fd-tile__dot"
          />
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  
            
</section>
`;
